set( THIS_COMPONENT_NAME chameleon ) 

if( "__${PROJECT_SOURCE_DIR}__" STREQUAL "____" )

    PROJECT( ${THIS_COMPONENT_NAME} CXX C ASM)
    
    set ( ${THIS_COMPONENT_NAME}_STANDALONE_BUILD TRUE )
    
endif( "__${PROJECT_SOURCE_DIR}__" STREQUAL "____" )

set( COMPONENT_SOURCEFILES   main.c )

ADD_EXECUTABLE    ( ${THIS_COMPONENT_NAME} ${COMPONENT_SOURCEFILES} )